test/tasty/neg/src-2/TestDelayedChained_fail.scala
package tastytest

object TestDelayedChained {
  def foo(r: DelayedChained.Root): Unit = r match { case _: DelayedChained.LeafA => ()  }
}
